# nidaime-takohachi

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Dockerfile  README.md  SYSTEMD_SETUP.md  config.example.json  setup-systemd.sh  takohachi.service  update.sh
.github/workflows/: ci.yaml
src/: config.rs  google_sheets.rs  lib.rs  main.rs  scheduled_tasks.rs  utils.rs
src/commands/: count.rs  debug_stock.rs  debug_weather.rs  dic.rs  gemini.rs  marimo.rs  mod.rs  ping.rs
src/scheduled_tasks/: daily_morning_task.rs  delete_message.rs  mod.rs  periodic_message.rs  status_report.rs  tips_reminder.rs
