[package]
name = "nidaime-takohachi"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }

[dependencies.serenity]
version = "0.12.4"
default-features = false
features = [
    "builder",
    "cache",
    "chrono",
    "client",
    "collector",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
]

