[package]
name = "nidaime-takohachi"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
chrono = "0.4"
chrono-tz = "0.8"
rand = "0.8"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.serenity]
version = "0.12.4"
default-features = false
features = [
    "builder",
    "cache",
    "chrono",
    "client",
    "collector",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
]

